docs/envoy/v1.6.0/_sources/api-v2/config/filter/http/fault/v2/fault.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/fault/v2/fault.proto:

Fault Injection
===============

Fault Injection :ref:`configuration overview <config_http_filters_fault_injection>`.

.. _envoy_api_msg_config.filter.http.fault.v2.FaultAbort:

config.filter.http.fault.v2.FaultAbort
--------------------------------------

`[config.filter.http.fault.v2.FaultAbort proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/http/fault/v2/fault.proto#L13>`_


.. code-block:: json

  {
    "percent": "...",
    "http_status": "..."
  }

.. _envoy_api_field_config.filter.http.fault.v2.FaultAbort.percent:

percent
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An integer between 0-100 indicating the percentage of requests/operations/connections
  that will be aborted with the error code provided.
  
  
.. _envoy_api_field_config.filter.http.fault.v2.FaultAbort.http_status:

http_status
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) HTTP status code to use to abort the HTTP request.
  
  
  Precisely one of :ref:`http_status <envoy_api_field_config.filter.http.fault.v2.FaultAbort.http_status>` must be set.
  


.. _envoy_api_msg_config.filter.http.fault.v2.HTTPFault:

config.filter.http.fault.v2.HTTPFault
-------------------------------------

`[config.filter.http.fault.v2.HTTPFault proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/http/fault/v2/fault.proto#L26>`_


.. code-block:: json

  {
    "delay": "{...}",
    "abort": "{...}",
    "upstream_cluster": "...",
    "headers": [],
    "downstream_nodes": []
  }

.. _envoy_api_field_config.filter.http.fault.v2.HTTPFault.delay:

delay
  (:ref:`config.filter.fault.v2.FaultDelay <envoy_api_msg_config.filter.fault.v2.FaultDelay>`) If specified, the filter will inject delays based on the values in the
  object. At least *abort* or *delay* must be specified.
  
  
.. _envoy_api_field_config.filter.http.fault.v2.HTTPFault.abort:

abort
  (:ref:`config.filter.http.fault.v2.FaultAbort <envoy_api_msg_config.filter.http.fault.v2.FaultAbort>`) If specified, the filter will abort requests based on the values in
  the object. At least *abort* or *delay* must be specified.
  
  
.. _envoy_api_field_config.filter.http.fault.v2.HTTPFault.upstream_cluster:

upstream_cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies the name of the (destination) upstream cluster that the
  filter should match on. Fault injection will be restricted to requests
  bound to the specific upstream cluster.
  
  
.. _envoy_api_field_config.filter.http.fault.v2.HTTPFault.headers:

headers
  (:ref:`route.HeaderMatcher <envoy_api_msg_route.HeaderMatcher>`) Specifies a set of headers that the filter should match on. The fault
  injection filter can be applied selectively to requests that match a set of
  headers specified in the fault filter config. The chances of actual fault
  injection further depend on the value of the :ref:`percent
  <envoy_api_field_config.filter.http.fault.v2.FaultAbort.percent>` field. The filter will
  check the request's headers against all the specified headers in the filter
  config. A match will happen if all the headers in the config are present in
  the request with the same values (or based on presence if the *value* field
  is not in the config).
  
  
.. _envoy_api_field_config.filter.http.fault.v2.HTTPFault.downstream_nodes:

downstream_nodes
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Faults are injected for the specified list of downstream hosts. If this
  setting is not set, faults are injected for all downstream nodes.
  Downstream node name is taken from :ref:`the HTTP
  x-envoy-downstream-service-node
  <config_http_conn_man_headers_downstream-service-node>` header and compared
  against downstream_nodes list.
  
  

